# msci-momentum

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily.yml
docs/: index.html
docs/data/: 2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  index.json
scripts/: build_site.py
src/msci_momentum/: __init__.py  app.py  cli.py  data.py  issuers.py  momentum.py  pipeline.py  portfolio.py  risk_free.py  universe.py
tests/: test_momentum.py
